Allow the user to login if details are correct and creates a token for authentication

--- a/Words/Server/appsettings.json
+++ b/Words/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "This is a token. What is a token. It is a secret I cannot tell you. Sorry."
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=words-db;Trusted_Connection=True;TrustServerCertificate=True"
   },
