Update appsettings.jason and program.cs to avoid hardcoding the token string

--- a/Words/Server/appsettings.json
+++ b/Words/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "AppSettings": {
-    "Token": "This is a token. What is a token. It is a secret I cannot tell you. Sorry."
+  "TokenSettings": {
+    "TokenKey": "CtGuBLLLcmPvksW7x2V1mdp79FC778xmHM5NEoiH"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=words-db;Trusted_Connection=True;TrustServerCertificate=True"
